🤔Use blaze-svg example with scotty

--- a/aniweb.cabal
+++ b/aniweb.cabal
@@ -29,6 +29,7 @@ executable aniweb-exe
                      , aniweb
                      , scotty
                      , text
+                     , blaze-svg
   default-language:    Haskell2010
 
 test-suite aniweb-test
