--- a/aniweb.cabal
+++ b/aniweb.cabal
@@ -30,6 +30,7 @@ executable aniweb-exe
                      , scotty
                      , text
                      , blaze-svg
+                     , blaze-markup
   default-language:    Haskell2010
 
 test-suite aniweb-test
