--- a/aniweb.cabal
+++ b/aniweb.cabal
@@ -15,10 +15,13 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Appearance
+                     , Shapes
   build-depends:       base >= 4.7 && < 5
                      , blaze-html
                      , text
+                     , blaze-svg
+                     , blaze-markup
   default-language:    Haskell2010
 
 executable aniweb-exe
